--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -36,5 +36,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-system": "^5.1.5"
-  }
+  },
+  "gitHead": "35c41ea7656f13628c0fd5b3c9bb536baa678f34"
 }
