--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@bauheaven/baustyle-react",
   "description": "React components for building UIs with BauStyle",
-  "version": "0.3.0",
+  "version": "0.2.0",
+  "private": false,
   "main": "src/index.ts",
   "scripts": {
     "test": "jest",
     "storybook": "start-storybook"
   },
   "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
@@ -37,5 +37,6 @@
     "react-dom": "^16.13.1",
     "styled-system": "^5.1.5"
   },
+  "license": "Apache-2.0",
   "gitHead": "35c41ea7656f13628c0fd5b3c9bb536baa678f34"
 }
