--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "baustyle",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "lerna": "^3.21.0"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "jest": "^26.0.1"
+  }
 }
