--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -37,11 +37,11 @@
     "react-test-renderer": "^16.13.1",
     "ts-jest": "^25.5.1",
     "ts-loader": "^7.0.4",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-system": "^5.1.5"
