--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bauheaven/baustyle-react",
   "description": "React components for building UIs with BauStyle",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "publishConfig": {
     "access": "public"
   },
@@ -23,6 +23,8 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@storybook/addon-info": "^5.3.18",
     "@storybook/react": "^5.3.18",
     "@types/jest": "^25.2.1",
@@ -37,9 +39,7 @@
     "react-test-renderer": "^16.13.1",
     "ts-jest": "^25.5.1",
     "ts-loader": "^7.0.4",
-    "typescript": "^3.9.2",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27"
+    "typescript": "^3.9.2"
   },
   "dependencies": {
     "react": "^16.13.1",
