--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -23,7 +23,6 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@storybook/addon-info": "^5.3.18",
     "@storybook/react": "^5.3.18",
@@ -44,7 +43,9 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "@emotion/core": "^10.0.28"
+
   },
   "license": "Apache-2.0",
   "gitHead": "67ce882f8e77758185dd3768d6a1f1158c87cef1"
