customize select theming

--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -46,7 +46,9 @@
     "@styled-icons/boxicons-regular": "^10.0.0",
     "@styled-icons/boxicons-solid": "^10.0.0",
     "@styled-icons/styled-icon": "^10.0.0",
+    "@styled-system/css": "^5.1.5",
     "@types/styled-components": "^5.1.0",
+    "@types/styled-system__css": "^5.0.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1",
