--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "baustyle",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.21.0",
-    "netlify-cli": "^2.58.0"
+    "lerna": "^3.21.0"  
   },
   "workspaces": [
     "packages/*"
